--- a/public/index.html
+++ b/public/index.html
@@ -30,14 +30,15 @@
 
 <body>
 
-    <video muted loop controls id="myVideo">
+    <video muted loop id="myVideo">
       <source id="mySource" type="video/mp4">
       <!-- <source src="teste.ogg" type="video/ogg">  -->
     </video>
 
 </body>
 <script src="/socket.io/socket.io.js"></script>
-<script>
+<script type="text/javascript" src="videoManager.js"></script>
+<!-- <script>
   var socket = io();
 //   socket.emit('any event', "event hello world!");
 
@@ -49,8 +50,11 @@
 
     source.setAttribute('src', videoName);
 
+
     elem.load();
     elem.play();
+    console.log(source.src);
+    console.log(elem.currentSrc);
 
   });
 
@@ -79,5 +83,5 @@
     //     elem.play();
     // }, 5000);
    
-</script>
+</script> -->
 </html>
